--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "dev:remote": "cross-env REACT_APP_DEV_REMOTE=remote npm start",
+    "dev:remote": "npm start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
