--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dayjs": "^1.10.4",
     "framer-motion": "^4.1.13",
     "history": "^4.10.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.39.3",
