--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc-gen-frontent",
+  "name": "doc-gen-frontend",
   "version": "0.1.0",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "^1.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -28,21 +29,13 @@
     "test": "craco test",
     "eject": "react-scripts eject"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@craco/craco": "^6.1.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "craco-alias": "^3.0.1",
     "craco-less": "^1.17.1",
     "cross-env": "^7.0.3",
